@@ -1,3 +1,10 @@
+2006-04-24  Adam Jackson  <ajax@freedesktop.org>
+
+	* fb/fbcompose.c:
+	* render/picture.c:
+	* render/picture.h:
+	Bug #6325: Add support for x4a4 picture format.
+
 2006-04-18  Donnie Berkholz  <spyderous@gentoo.org>
 
 	reviewed by: Alan Coopersmith
